fixed alignment of book intros

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -178,7 +178,7 @@ body.table-of-contents #books .ref.greyed {
   float: left;
   clear: none;
   width: 50%;
-  min-height: 240px; 
+  min-height: 280px; 
 }
 body.page > .content {
 
